internal/gatewayapi/testdata/envoyproxy-tracing-strategic-merge-inherited-backendref.out.yaml
envoyProxiesForGateways:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: gateway-proxy
    namespace: envoy-gateway
  spec:
    logging: {}
    mergeType: StrategicMerge
    telemetry:
      tracing:
        provider:
          backendRefs:
          - name: datadog-agent
            namespace: envoy-gateway-system
            port: 8126
          serviceName: my-custom-service
          type: Datadog
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: GatewayClass
        name: envoy-gateway-class
      conditions:
      - lastTransitionTime: null
        message: EnvoyProxy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: EnvoyProxy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: class-proxy
    namespace: envoy-gateway-system
  spec:
    logging: {}
    telemetry:
      tracing:
        provider:
          backendRefs:
          - name: datadog-agent
            port: 8126
          type: Datadog
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: GatewayClass
        name: envoy-gateway-class
      conditions:
      - lastTransitionTime: null
        message: EnvoyProxy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
gatewayClass:
  apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    name: envoy-gateway-class
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: class-proxy
      namespace: envoy-gateway-system
  status:
    conditions:
    - lastTransitionTime: null
      message: Valid GatewayClass
      reason: Accepted
      status: "True"
      type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    infrastructure:
      parametersRef:
        group: gateway.envoyproxy.io
        kind: EnvoyProxy
        name: gateway-proxy
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: gateway-proxy
          namespace: envoy-gateway
        spec:
          logging: {}
          mergeType: StrategicMerge
          telemetry:
            tracing:
              provider:
                backendRefs:
                - name: datadog-agent
                  namespace: envoy-gateway-system
                  port: 8126
                serviceName: my-custom-service
                type: Datadog
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: GatewayClass
              name: envoy-gateway-class
            conditions:
            - lastTransitionTime: null
              message: EnvoyProxy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: gateway-1
              namespace: envoy-gateway
            conditions:
            - lastTransitionTime: null
              message: EnvoyProxy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tracing:
      authority: datadog-agent.envoy-gateway-system.svc
      destination:
        metadata:
          kind: EnvoyProxy
          name: gateway-proxy
          namespace: envoy-gateway
        name: tracing
        settings:
        - addressType: IP
          endpoints:
          - host: 7.7.7.7
            port: 8126
          metadata:
            kind: Service
            name: datadog-agent
            namespace: envoy-gateway-system
            sectionName: "8126"
          name: tracing/backend/-1
          protocol: TCP
      provider:
        backendRefs:
        - name: datadog-agent
          namespace: envoy-gateway-system
          port: 8126
        port: 4317
        serviceName: my-custom-service
        type: Datadog
      samplingRate: 100
      serviceName: my-custom-service
